# Assignment2

./: CMakeLists.txt  OpenGLMeshLoader.cpp  README.TXT  path.txt
soil-master/src/: SOIL.c  image_helper.c
